--- a/admin.html
+++ b/admin.html
@@ -4,60 +4,127 @@
 <meta charset="UTF-8">
 <title>Welcome Admin</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-body{margin:0;font-family:system-ui;background:#f1f5f9;min-height:100vh;display:flex;flex-direction:column}
-header{background:#0f172a;color:#fff;padding:1rem;text-align:center}
-.container{max-width:1100px;margin:auto;padding:1rem;flex:1}
-.card{background:#fff;padding:1rem;border-radius:12px;box-shadow:0 8px 20px rgba(0,0,0,.1);margin-bottom:1rem}
-input,textarea,select{width:100%;padding:10px;margin-top:8px;border-radius:8px;border:1px solid #ccc}
-button{margin-top:12px;padding:10px;width:100%;border:none;border-radius:8px;background:#2563eb;color:#fff;cursor:pointer}
-footer{text-align:center;padding:.8rem;font-size:.85rem;color:#64748b}
+body{
+  margin:0;
+  font-family:system-ui;
+  background:#f1f5f9;
+  min-height:100vh;
+  display:flex;
+  flex-direction:column
+}
+header{
+  background:#0f172a;
+  color:white;
+  padding:1rem;
+  text-align:center
+}
+.container{
+  max-width:1000px;
+  margin:auto;
+  padding:1rem;
+  flex:1
+}
+.card{
+  background:white;
+  padding:1.2rem;
+  border-radius:12px;
+  box-shadow:0 8px 20px rgba(0,0,0,.1);
+  margin-bottom:1rem
+}
+label{
+  display:block;
+  margin-top:12px;
+  font-weight:600
+}
+input,textarea,select{
+  width:100%;
+  padding:10px;
+  margin-top:6px;
+  border-radius:8px;
+  border:1px solid #ccc
+}
+button{
+  margin-top:16px;
+  padding:12px;
+  width:100%;
+  background:#2563eb;
+  color:white;
+  border:none;
+  border-radius:10px;
+  cursor:pointer
+}
+footer{
+  text-align:center;
+  padding:.8rem;
+  font-size:.85rem;
+  color:#64748b
+}
 </style>
 </head>
 
 <body>
-<header><h1>Welcome Admin</h1></header>
+
+<header>
+  <h1>Welcome Admin</h1>
+</header>
 
 <div class="container">
-<form id="contentForm" class="card">
-<h3>Add / Update Content</h3>
 
-<label>Category</label>
-<select id="category">
-  <option value="news">News</option>
-  <option value="instructions">Instructions</option>
-  <option value="syllabus">Syllabus</option>
-  <option value="notices">Notices</option>
-  <option value="images">Images</option>
-  <option value="videos">Videos</option>
-  <option value="documents">Documents</option>
-</select>
+  <!-- 🔥 ADMIN FORM -->
+  <form id="contentForm" class="card">
 
-<label>Content Type</label>
-<select id="type">
-  <option value="text">Text</option>
-  <option value="image">Image</option>
-  <option value="video">Video</option>
-  <option value="document">Document</option>
-</select>
+    <h3>Add Content</h3>
 
-<input id="title" placeholder="Title" required>
-<textarea id="description" placeholder="Description (optional)"></textarea>
+    <!-- ✅ CATEGORY SELECT (THIS IS WHAT YOU WERE MISSING) -->
+    <label for="category">Select Category</label>
+    <select id="category" required>
+      <option value="">-- Choose Category --</option>
+      <option value="news">News</option>
+      <option value="instructions">Instructions</option>
+      <option value="syllabus">Syllabus</option>
+      <option value="notices">Notices</option>
+      <option value="images">Images</option>
+      <option value="videos">Videos</option>
+      <option value="documents">Documents</option>
+    </select>
 
-<textarea id="mediaUrls" placeholder="Media URLs (comma separated)"></textarea>
+    <label for="type">Content Type</label>
+    <select id="type" required>
+      <option value="text">Text</option>
+      <option value="image">Image</option>
+      <option value="video">Video</option>
+      <option value="document">Document</option>
+    </select>
 
-<input id="order" type="number" placeholder="Order">
+    <label for="title">Title</label>
+    <input id="title" placeholder="Title" required>
 
-<button type="submit">Save Content</button>
-</form>
+    <label for="description">Description</label>
+    <textarea id="description"></textarea>
 
-<div id="adminList"></div>
+    <label for="mediaUrls">Media URLs (comma separated)</label>
+    <textarea id="mediaUrls" placeholder="https://... , https://..."></textarea>
+
+    <label for="order">Display Order</label>
+    <input id="order" type="number" placeholder="1, 2, 3...">
+
+    <button type="submit">Save Content</button>
+  </form>
+
+  <!-- ADMIN LIST -->
+  <div id="adminList"></div>
+
 </div>
 
-<footer>© 2026 Vipul Bishnoi. All rights reserved.</footer>
+<footer>
+  © 2026 Vipul Bishnoi. All rights reserved.
+</footer>
 
 <script type="module" src="js/firebase.js"></script>
 <script type="module" src="js/auth.js"></script>
 <script type="module" src="js/admin.js"></script>
+
 </body>
 </html>
