--- a/index.html
+++ b/index.html
@@ -3,75 +3,237 @@
 <head>
 <meta charset="UTF-8">
 <title>User Portal</title>
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<style>
-*{box-sizing:border-box}
-body{margin:0;font-family:system-ui;background:#f8fafc;min-height:100vh;display:flex;flex-direction:column}
-header{background:#0f172a;color:#fff;padding:1rem;display:flex;gap:1rem;align-items:center}
-.menu{font-size:24px;cursor:pointer}
-nav{position:fixed;top:0;left:0;width:260px;height:100%;background:#1e293b;padding:1rem;transform:translateX(-100%);transition:.3s;z-index:1000}
-nav.open{transform:translateX(0)}
-nav a{display:block;color:#fff;padding:10px 0;text-decoration:none}
-nav .close{text-align:right;color:#fff;font-size:20px;cursor:pointer}
-main{max-width:1300px;margin:auto;padding:1rem;flex:1}
-#contentGrid{display:grid;gap:1rem}
-@media(min-width:600px){#contentGrid{grid-template-columns:repeat(2,1fr)}}
-@media(min-width:900px){#contentGrid{grid-template-columns:repeat(3,1fr)}}
-@media(min-width:1200px){#contentGrid{grid-template-columns:repeat(4,1fr)}}
-.card{background:#fff;border-radius:12px;padding:1rem;box-shadow:0 8px 20px rgba(0,0,0,.08)}
-.card img{width:100%;border-radius:8px;cursor:pointer}
-footer{text-align:center;padding:.8rem;font-size:.85rem;color:#64748b}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-/* MODAL */
-.modal{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,.8);display:none;align-items:center;justify-content:center;z-index:2000}
-.modal img{max-width:90%;max-height:90%}
-.modal span{position:absolute;top:20px;right:30px;color:#fff;font-size:30px;cursor:pointer}
+<style>
+* { box-sizing: border-box; }
+
+body {
+  margin: 0;
+  font-family: system-ui, sans-serif;
+  background: #f8fafc;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+}
+
+/* HEADER */
+header {
+  background: #0f172a;
+  color: white;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.menu {
+  font-size: 24px;
+  cursor: pointer;
+}
+
+#pageTitle {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+/* SIDEBAR MENU */
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 260px;
+  height: 100%;
+  background: #1e293b;
+  padding: 1rem;
+  transform: translateX(-100%);
+  transition: .3s;
+  z-index: 1000;
+}
+
+nav.open { transform: translateX(0); }
+
+nav a {
+  display: block;
+  color: white;
+  padding: 12px 0;
+  text-decoration: none;
+}
+
+nav .close {
+  text-align: right;
+  font-size: 20px;
+  cursor: pointer;
+  color: white;
+}
+
+/* MAIN CONTENT — FULL WIDTH LOOK */
+main {
+  flex: 1;
+  padding: 1rem;
+}
+
+/* Full width container with small margins */
+.content-wrapper {
+  width: 100%;
+  max-width: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+/* CONTENT BLOCKS */
+.card {
+  background: white;
+  border-radius: 12px;
+  padding: 1.2rem;
+  box-shadow: 0 8px 20px rgba(0,0,0,.08);
+  margin-bottom: 1rem;
+  width: 100%;
+}
+
+/* GRID FOR IMAGES / VIDEOS */
+#contentGrid {
+  display: grid;
+  gap: 1rem;
+}
+
+@media (min-width: 600px) {
+  #contentGrid { grid-template-columns: repeat(2, 1fr); }
+}
+@media (min-width: 900px) {
+  #contentGrid { grid-template-columns: repeat(3, 1fr); }
+}
+@media (min-width: 1200px) {
+  #contentGrid { grid-template-columns: repeat(4, 1fr); }
+}
+
+#contentGrid img {
+  width: 100%;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* EMPTY MESSAGE */
+.empty {
+  text-align: center;
+  color: #64748b;
+  padding: 2rem;
+}
+
+/* FOOTER */
+footer {
+  text-align: center;
+  padding: 0.8rem;
+  font-size: 0.85rem;
+  color: #64748b;
+}
 </style>
 </head>
 
 <body>
+
 <header>
-<span class="menu" onclick="toggleMenu()">☰</span>
-<h2 id="pageTitle">Home</h2>
+  <span class="menu" onclick="toggleMenu()">☰</span>
+  <h2 id="pageTitle">Home</h2>
 </header>
 
 <nav id="nav">
-<div class="close" onclick="toggleMenu()">✕</div>
-<a onclick="load('news')">News</a>
-<a onclick="load('instructions')">Instructions</a>
-<a onclick="load('syllabus')">Syllabus</a>
-<a onclick="load('notices')">Notices</a>
-<a onclick="load('images')">Images</a>
-<a onclick="load('videos')">Videos</a>
-<a onclick="load('documents')">Documents</a>
+  <div class="close" onclick="toggleMenu()">✕</div>
+  <a onclick="showHome()">Home</a>
+  <a onclick="load('news')">News</a>
+  <a onclick="load('instructions')">Instructions</a>
+  <a onclick="load('syllabus')">Syllabus</a>
+  <a onclick="load('notices')">Notices</a>
+  <a onclick="load('images')">Images</a>
+  <a onclick="load('videos')">Videos</a>
+  <a onclick="load('documents')">Documents</a>
+  <a onclick="showAbout()">About Us</a>
 </nav>
 
-<main><div id="contentGrid"></div></main>
+<main>
+  <div class="content-wrapper" id="contentArea"></div>
+</main>
 
-<footer>© 2026 Vipul Bishnoi. All rights reserved.</footer>
-
-<div class="modal" id="modal">
-<span onclick="closeModal()">×</span>
-<img id="modalImg">
-</div>
+<footer>
+  © 2026 Vipul Bishnoi. All rights reserved.
+</footer>
 
 <script>
-const nav=document.getElementById("nav");
-function toggleMenu(){nav.classList.toggle("open")}
-function closeModal(){document.getElementById("modal").style.display="none"}
-function openModal(src){
-  document.getElementById("modalImg").src=src;
-  document.getElementById("modal").style.display="flex";
+const nav = document.getElementById("nav");
+const content = document.getElementById("contentArea");
+const title = document.getElementById("pageTitle");
+
+function toggleMenu() {
+  nav.classList.toggle("open");
 }
-function load(cat){
+
+function closeMenu() {
   nav.classList.remove("open");
-  pageTitle.textContent=cat.toUpperCase();
-  contentGrid.innerHTML="";
-  window.loadContent(cat);
 }
+
+/* HOME */
+function showHome() {
+  closeMenu();
+  title.textContent = "Home";
+
+  content.innerHTML = `
+    <div class="card">
+      <h2>Welcome Dear User 👋</h2>
+      <p>
+        This portal provides official announcements, notices,
+        documents, and updates in a clean and organised way.
+      </p>
+      <p>
+        Please use the menu to explore different sections.
+      </p>
+    </div>
+  `;
+}
+
+/* ABOUT */
+function showAbout() {
+  closeMenu();
+  title.textContent = "About Us";
+
+  content.innerHTML = `
+    <div class="card">
+      <h2>Vipul Bishnoi</h2>
+      <p><strong>Professional Web Developer</strong></p>
+      <p>Email: vipulbishnoi2992@gmail.com</p>
+      <p>Phone: 94******07</p>
+
+      <p>
+        <a href="https://t.me/Unknownbishnoi07" target="_blank">Telegram</a> |
+        <a href="https://github.com/Vipul-029" target="_blank">GitHub</a> |
+        <a href="https://www.linkedin.com/in/vipul-bishnoi-717827362" target="_blank">LinkedIn</a>
+      </p>
+    </div>
+  `;
+}
+
+/* LOAD CATEGORY CONTENT */
+function load(category) {
+  closeMenu();
+  title.textContent = category.charAt(0).toUpperCase() + category.slice(1);
+
+  content.innerHTML = `
+    <div class="content-wrapper">
+      <div id="contentGrid"></div>
+    </div>
+  `;
+
+  if (window.loadContent) {
+    window.loadContent(category);
+  }
+}
+
+/* DEFAULT */
+showHome();
 </script>
 
 <script type="module" src="js/firebase.js"></script>
 <script type="module" src="js/user.js"></script>
+
 </body>
 </html>
