--- a/index.html
+++ b/index.html
@@ -1,239 +1,88 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <title>User Portal</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style>
-* { box-sizing: border-box; }
-
-body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
-  background: #f8fafc;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-}
-
-/* HEADER */
-header {
-  background: #0f172a;
-  color: white;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.menu {
-  font-size: 24px;
-  cursor: pointer;
-}
-
-#pageTitle {
-  font-size: 1.2rem;
-  margin: 0;
-}
-
-/* SIDEBAR MENU */
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 260px;
-  height: 100%;
-  background: #1e293b;
-  padding: 1rem;
-  transform: translateX(-100%);
-  transition: .3s;
-  z-index: 1000;
-}
-
-nav.open { transform: translateX(0); }
-
-nav a {
-  display: block;
-  color: white;
-  padding: 12px 0;
-  text-decoration: none;
-}
-
-nav .close {
-  text-align: right;
-  font-size: 20px;
-  cursor: pointer;
-  color: white;
-}
-
-/* MAIN CONTENT — FULL WIDTH LOOK */
-main {
-  flex: 1;
-  padding: 1rem;
-}
-
-/* Full width container with small margins */
-.content-wrapper {
-  width: 100%;
-  max-width: 100%;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-/* CONTENT BLOCKS */
-.card {
-  background: white;
-  border-radius: 12px;
-  padding: 1.2rem;
-  box-shadow: 0 8px 20px rgba(0,0,0,.08);
-  margin-bottom: 1rem;
-  width: 100%;
-}
-
-/* GRID FOR IMAGES / VIDEOS */
-#contentGrid {
-  display: grid;
-  gap: 1rem;
-}
-
-@media (min-width: 600px) {
-  #contentGrid { grid-template-columns: repeat(2, 1fr); }
-}
-@media (min-width: 900px) {
-  #contentGrid { grid-template-columns: repeat(3, 1fr); }
-}
-@media (min-width: 1200px) {
-  #contentGrid { grid-template-columns: repeat(4, 1fr); }
-}
-
-#contentGrid img {
-  width: 100%;
-  border-radius: 8px;
-  cursor: pointer;
-}
-
-/* EMPTY MESSAGE */
-.empty {
-  text-align: center;
-  color: #64748b;
-  padding: 2rem;
-}
-
-/* FOOTER */
-footer {
-  text-align: center;
-  padding: 0.8rem;
-  font-size: 0.85rem;
-  color: #64748b;
-}
+body{margin:0;font-family:system-ui;background:#f8fafc;display:flex;flex-direction:column;min-height:100vh}
+header{background:#0f172a;color:#fff;padding:1rem;display:flex;gap:1rem}
+.menu{font-size:24px;cursor:pointer}
+nav{position:fixed;top:0;left:0;width:260px;height:100%;background:#1e293b;padding:1rem;transform:translateX(-100%);transition:.3s}
+nav.open{transform:translateX(0)}
+nav a{color:#fff;display:block;padding:10px 0;text-decoration:none}
+main{flex:1;padding:1rem}
+.card{background:#fff;padding:1rem;border-radius:10px;margin-bottom:1rem;box-shadow:0 6px 18px rgba(0,0,0,.08)}
+.buttons a{display:inline-block;margin:6px;padding:10px 14px;border-radius:6px;background:#2563eb;color:#fff;text-decoration:none}
+.recent{height:140px;overflow:hidden}
+.recent.scroll{animation:scroll 6s linear infinite}
+@keyframes scroll{0%{transform:translateY(0)}100%{transform:translateY(-50%)}}
+footer{text-align:center;font-size:.85rem;color:#64748b;padding:.8rem}
 </style>
 </head>
 
 <body>
 
 <header>
-  <span class="menu" onclick="toggleMenu()">☰</span>
-  <h2 id="pageTitle">Home</h2>
+<span class="menu" onclick="nav.classList.toggle('open')">☰</span>
+<h3 id="title">Home</h3>
 </header>
 
 <nav id="nav">
-  <div class="close" onclick="toggleMenu()">✕</div>
-  <a onclick="showHome()">Home</a>
-  <a onclick="load('news')">News</a>
-  <a onclick="load('instructions')">Instructions</a>
-  <a onclick="load('syllabus')">Syllabus</a>
-  <a onclick="load('notices')">Notices</a>
-  <a onclick="load('images')">Images</a>
-  <a onclick="load('videos')">Videos</a>
-  <a onclick="load('documents')">Documents</a>
-  <a onclick="showAbout()">About Us</a>
+<a onclick="home()">Home</a>
+<a onclick="load('news')">News</a>
+<a onclick="load('instructions')">Instructions</a>
+<a onclick="load('syllabus')">Syllabus</a>
+<a onclick="load('notices')">Notices</a>
+<a onclick="load('images')">Images</a>
+<a onclick="load('videos')">Videos</a>
+<a onclick="load('documents')">Documents</a>
+<a onclick="about()">About Us</a>
 </nav>
 
-<main>
-  <div class="content-wrapper" id="contentArea"></div>
-</main>
+<main id="content"></main>
 
-<footer>
-  © 2026 Vipul Bishnoi. All rights reserved.
-</footer>
+<footer>© 2026 Vipul Bishnoi. All rights reserved.</footer>
 
 <script>
-const nav = document.getElementById("nav");
-const content = document.getElementById("contentArea");
-const title = document.getElementById("pageTitle");
+const content=document.getElementById("content");
+const title=document.getElementById("title");
 
-function toggleMenu() {
-  nav.classList.toggle("open");
+function home(){
+title.textContent="Home";
+content.innerHTML=`
+<div class="card">Welcome Dear User 👋</div>
+<div class="card">
+<strong>Recent Updates</strong>
+<div id="recent" class="recent">Loading…</div>
+</div>`;
+loadRecent();
 }
 
-function closeMenu() {
-  nav.classList.remove("open");
+function about(){
+title.textContent="About Us";
+content.innerHTML=`
+<div class="card">
+<h3>Vipul Bishnoi</h3>
+<p>Professional Web Developer</p>
+<div class="buttons">
+<a href="https://t.me/Unknownbishnoi07" target="_blank">Telegram</a>
+<a href="https://github.com/Vipul-029" target="_blank">GitHub</a>
+<a href="https://www.linkedin.com/in/vipul-bishnoi-717827362" target="_blank">LinkedIn</a>
+</div>
+</div>`;
 }
 
-/* HOME */
-function showHome() {
-  closeMenu();
-  title.textContent = "Home";
-
-  content.innerHTML = `
-    <div class="card">
-      <h2>Welcome Dear User 👋</h2>
-      <p>
-        This portal provides official announcements, notices,
-        documents, and updates in a clean and organised way.
-      </p>
-      <p>
-        Please use the menu to explore different sections.
-      </p>
-    </div>
-  `;
+function load(cat){
+title.textContent=cat.toUpperCase();
+content.innerHTML=`<div id="grid"></div>`;
+loadContent(cat);
 }
 
-/* ABOUT */
-function showAbout() {
-  closeMenu();
-  title.textContent = "About Us";
-
-  content.innerHTML = `
-    <div class="card">
-      <h2>Vipul Bishnoi</h2>
-      <p><strong>Professional Web Developer</strong></p>
-      <p>Email: vipulbishnoi2992@gmail.com</p>
-      <p>Phone: 94******07</p>
-
-      <p>
-        <a href="https://t.me/Unknownbishnoi07" target="_blank">Telegram</a> |
-        <a href="https://github.com/Vipul-029" target="_blank">GitHub</a> |
-        <a href="https://www.linkedin.com/in/vipul-bishnoi-717827362" target="_blank">LinkedIn</a>
-      </p>
-    </div>
-  `;
-}
-
-/* LOAD CATEGORY CONTENT */
-function load(category) {
-  closeMenu();
-  title.textContent = category.charAt(0).toUpperCase() + category.slice(1);
-
-  content.innerHTML = `
-    <div class="content-wrapper">
-      <div id="contentGrid"></div>
-    </div>
-  `;
-
-  if (window.loadContent) {
-    window.loadContent(category);
-  }
-}
-
-/* DEFAULT */
-showHome();
+home();
 </script>
 
 <script type="module" src="js/firebase.js"></script>
 <script type="module" src="js/user.js"></script>
-
 </body>
 </html>
