--- a/index.html
+++ b/index.html
@@ -6,25 +6,36 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+:root{
+  --bg:#f1f5f9;
+  --card:#ffffff;
+  --border:#e2e8f0;
+  --dark:#0f172a;
+  --text:#0f172a;
+  --muted:#475569;
+}
+
 *{box-sizing:border-box}
 
 body{
   margin:0;
   font-family:system-ui,sans-serif;
-  background:#f8fafc;
+  background:var(--bg);
+  color:var(--text);
   min-height:100vh;
-  overflow-x:hidden;
+  display:flex;
+  flex-direction:column;
 }
 
-/* ===== HEADER (NORMAL HEIGHT) ===== */
+/* HEADER */
 header{
   height:52px;
-  background:#0f172a;
-  color:#fff;
+  background:var(--dark);
+  color:white;
   display:flex;
   align-items:center;
-  padding:0 12px;
   gap:10px;
+  padding:0 14px;
 }
 
 .menu-btn{
@@ -32,27 +43,23 @@ header{
   cursor:pointer;
 }
 
-.header-icon{
-  font-size:18px;
-}
-
 #pageTitle{
   font-size:16px;
   font-weight:500;
 }
 
-/* ===== SIDEBAR MENU ===== */
+/* MENU */
 nav{
   position:fixed;
   top:0;
   left:0;
   width:260px;
   height:100%;
-  background:#1e293b;
-  padding:12px;
+  background:var(--dark);
+  padding:14px;
   transform:translateX(-100%);
-  transition:transform .25s ease;
-  z-index:9999; /* 🔥 prevents penetration */
+  transition:.25s;
+  z-index:9999;
 }
 
 nav.open{transform:translateX(0)}
@@ -61,8 +68,8 @@ nav.open{transform:translateX(0)}
   display:flex;
   justify-content:space-between;
   align-items:center;
-  color:#fff;
-  margin-bottom:10px;
+  color:white;
+  margin-bottom:14px;
 }
 
 .close-btn{
@@ -72,58 +79,92 @@ nav.open{transform:translateX(0)}
 
 nav a{
   display:flex;
-  align-items:center;
   gap:10px;
-  color:#fff;
-  text-decoration:none;
+  align-items:center;
+  color:white;
   padding:10px 4px;
+  text-decoration:none;
   font-size:15px;
   cursor:pointer;
 }
 
-/* ===== MAIN CONTENT ===== */
+/* MAIN */
 main{
-  padding:12px;
+  flex:1;
+  padding:16px;
 }
 
-.card{
-  background:#fff;
-  border-radius:8px;
+/* SECTIONS */
+.section{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:10px;
+  padding:16px;
+  margin-bottom:16px;
+}
+
+/* UPDATES */
+.update{
   padding:14px;
+  border:1px solid var(--border);
+  border-radius:8px;
   margin-bottom:12px;
-  box-shadow:0 4px 12px rgba(0,0,0,.08);
+  background:#fafafa;
 }
 
-/* ===== RECENT UPDATES ===== */
+.update-title{
+  font-weight:600;
+}
+
+.update-desc{
+  margin-top:6px;
+  color:var(--muted);
+}
+
+/* RECENT UPDATES */
 .recent-box{
-  height:140px;
-  overflow:hidden;
-  margin-top:8px;
-}
-
-.recent-list.scroll{
-  animation:scrollUp 6s linear infinite;
-}
-
-@keyframes scrollUp{
-  0%{transform:translateY(0)}
-  100%{transform:translateY(-50%)}
+  max-height:180px;
+  overflow-y:auto;
 }
 
 .recent-item{
-  padding:8px;
-  background:#f1f5f9;
-  margin-bottom:6px;
-  border-radius:6px;
+  border:1px solid var(--border);
+  border-radius:8px;
+  padding:10px;
+  margin-bottom:8px;
+  background:#fafafa;
   cursor:pointer;
 }
 
-/* ===== FOOTER ===== */
+.recent-item:hover{
+  background:#eef2f7;
+}
+
+/* ABOUT BUTTONS */
+.about-buttons a{
+  display:inline-block;
+  margin:6px 6px 0 0;
+  padding:10px 14px;
+  border-radius:6px;
+  background:var(--dark);
+  color:white;
+  text-decoration:none;
+  font-size:14px;
+}
+
+/* EMPTY STATE */
+.empty{
+  color:var(--muted);
+  font-style:italic;
+}
+
+/* FOOTER */
 footer{
   text-align:center;
   font-size:13px;
   color:#64748b;
-  padding:10px;
+  padding:12px;
+  border-top:1px solid var(--border);
 }
 </style>
 </head>
@@ -132,24 +173,23 @@ footer{
 
 <header>
   <span class="menu-btn" onclick="toggleMenu()">☰</span>
-  <span class="header-icon" id="headerIcon">🏠</span>
   <span id="pageTitle">Home</span>
 </header>
 
 <nav id="nav">
   <div class="nav-header">
     <strong>Menu</strong>
-    <span class="close-btn" onclick="closeMenu()">✕</span>
+    <span class="close-btn" onclick="toggleMenu()">✕</span>
   </div>
 
   <a onclick="showHome()">🏠 Home</a>
-  <a onclick="load('news','📰')">📰 News</a>
-  <a onclick="load('instructions','📋')">📋 Instructions</a>
-  <a onclick="load('syllabus','📘')">📘 Syllabus</a>
-  <a onclick="load('notices','📢')">📢 Notices</a>
-  <a onclick="load('images','🖼️')">🖼️ Images</a>
-  <a onclick="load('videos','🎥')">🎥 Videos</a>
-  <a onclick="load('documents','📄')">📄 Documents</a>
+  <a onclick="load('news')">📰 News</a>
+  <a onclick="load('instructions')">📋 Instructions</a>
+  <a onclick="load('syllabus')">📘 Syllabus</a>
+  <a onclick="load('notices')">📢 Notices</a>
+  <a onclick="load('images')">🖼️ Images</a>
+  <a onclick="load('videos')">🎥 Videos</a>
+  <a onclick="load('documents')">📄 Documents</a>
   <a onclick="showAbout()">ℹ️ About Us</a>
 </nav>
 
@@ -163,54 +203,49 @@ footer{
 const nav=document.getElementById("nav");
 const content=document.getElementById("content");
 const title=document.getElementById("pageTitle");
-const icon=document.getElementById("headerIcon");
 
 function toggleMenu(){nav.classList.toggle("open")}
-function closeMenu(){nav.classList.remove("open")}
-
-function setHeader(text,ic){
-  title.textContent=text;
-  icon.textContent=ic;
-}
 
 function showHome(){
-  closeMenu();
-  setHeader("Home","🏠");
+  toggleMenu();
+  title.textContent="Home";
   content.innerHTML=`
-    <div class="card">
-      <h3>Welcome Dear User 👋</h3>
-      <p>Please use the menu to explore updates and information.</p>
+    <div class="section">
+      <h3>Welcome Dear User</h3>
+      <p>This portal provides official information, notices, and updates.</p>
     </div>
 
-    <div class="card">
-      <strong>Recent Updates</strong>
-      <div class="recent-box">
-        <div id="recent" class="recent-list">Loading…</div>
-      </div>
-    </div>`;
+    <div class="section">
+      <h4>Recent Updates</h4>
+      <div id="recent" class="recent-box">Loading…</div>
+    </div>
+  `;
   loadRecent();
 }
 
 function showAbout(){
-  closeMenu();
-  setHeader("About Us","ℹ️");
+  toggleMenu();
+  title.textContent="About Us";
   content.innerHTML=`
-    <div class="card">
+    <div class="section">
       <h3>Vipul Bishnoi</h3>
       <p>Professional Web Developer</p>
-      <p>
-        <a href="https://t.me/Unknownbishnoi07" target="_blank">Telegram</a> |
-        <a href="https://github.com/Vipul-029" target="_blank">GitHub</a> |
+      <p>Email: vipulbishnoi2992@gmail.com</p>
+
+      <div class="about-buttons">
+        <a href="https://t.me/Unknownbishnoi07" target="_blank">Telegram</a>
+        <a href="https://github.com/Vipul-029" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/vipul-bishnoi-717827362" target="_blank">LinkedIn</a>
-      </p>
-    </div>`;
+      </div>
+    </div>
+  `;
 }
 
-function load(cat,ic){
-  closeMenu();
-  setHeader(cat.toUpperCase(),ic);
-  content.innerHTML=`<div id="grid"></div>`;
-  if(window.loadContent) window.loadContent(cat);
+function load(cat){
+  toggleMenu();
+  title.textContent=cat.toUpperCase();
+  content.innerHTML=`<div id="list" class="section"></div>`;
+  loadContent(cat);
 }
 
 showHome();
