--- a/index.html
+++ b/index.html
@@ -172,14 +172,15 @@ footer{
 <body>
 
 <header>
-  <span class="menu-btn" onclick="toggleMenu()">☰</span>
+  <span class="menu-btn" onclick="openMenu()">☰</span>
   <span id="pageTitle">Home</span>
 </header>
 
 <nav id="nav">
   <div class="nav-header">
     <strong>Menu</strong>
-    <span class="close-btn" onclick="toggleMenu()">✕</span>
+    <span class="close-btn" onclick="closeMenu()">✕</span>
+
   </div>
 
   <a onclick="showHome()">🏠 Home</a>
