--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ function showHome() {
   content.innerHTML = `
     <div class="section">
       <h3>Welcome Dear User</h3>
-      <p>This portal provides official information, notices, and updates.</p>
+      <p>This portal provides official information, notices, and updates.<br>Use the Menu to Navigate.</p>
     </div>
 
     <div class="section">
