--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@ function showHome() {
   content.innerHTML = `
     <div class="section">
       <h3>Welcome Dear User</h3>
-      <p>This portal provides official information, notices, and updates.<br>Use the Menu to Navigate.</p>
+      <p>This Website is designed to provide official information, notices, and updates to the Users.</p>
     </div>
 
     <div class="section">
-      <h4>Recent Updates</h4>
+      <h4>Recent Updates : </h4>
       <div id="recent" class="recent-box">Loading…</div>
     </div>
   `;
